reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_519_col_9_001.log

*** crates/tracewake-core/src/epistemics/projection.rs:519:9: replace EpistemicProjection::classified_actor_known_records_for_context -> Vec<ClassifiedActorKnownProjectionRecord<'_>> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace EpistemicProjection::classified_actor_known_records_for_context -> Vec<ClassifiedActorKnownProjectionRecord<'_>> with vec![Default::default()]
@@ -511,57 +511,17 @@
         }
     }
 
     pub fn classified_actor_known_records_for_context(
         &self,
         context: &KnowledgeContext,
         current_place_id: &PlaceId,
     ) -> Vec<ClassifiedActorKnownProjectionRecord<'_>> {
-        let latest_current_place_tick = self
-            .observations_for_context(context)
-            .into_iter()
-            .filter(|observation| observation.observer_place_id() == current_place_id)
-            .filter(|observation| observation.observed_tick() <= context.current_tick())
-            .map(|observation| observation.observed_tick())
-            .max();
-
-        let selected_workplaces = newest_workplace_records(
-            self.actor_known_records_by_actor
-                .get(context.viewer_actor_id()),
-        );
-
-        self.actor_known_records_by_actor
-            .get(context.viewer_actor_id())
-            .into_iter()
-            .flat_map(|records| records.iter())
-            .filter(|record| {
-                record
-                    .policy()
-                    .includes_classified_record(record, &selected_workplaces)
-            })
-            .map(|record| {
-                let current_place_record = record.relevant_place_id() == current_place_id;
-                let latest_current_place_record = is_latest_current_place_record(
-                    record,
-                    current_place_id,
-                    latest_current_place_tick,
-                );
-                ClassifiedActorKnownProjectionRecord {
-                    record,
-                    freshness: record.policy().freshness(
-                        record,
-                        latest_current_place_record,
-                        context.current_tick(),
-                    ),
-                    current_place_record,
-                    latest_current_place_record,
-                }
-            })
-            .collect()
+        vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn debug_epistemics_view(&self) -> DebugEpistemicsView {
         let observations = self
             .observations_by_id
             .values()
             .map(debug_observation_entry)
             .collect();


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/projection.rs` has changed (1781909410.011924724s, 7s after last build at 1781909403.339924868s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ClassifiedActorKnownProjectionRecord<'_>: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:519:14
    |
519 |         vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ClassifiedActorKnownProjectionRecord<'_>`
   --> crates/tracewake-core/src/epistemics/projection.rs:242:1
    |
242 | pub struct ClassifiedActorKnownProjectionRecord<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
